# SO-ARM100-ROS2

./: .gitignore  LICENSE  README.md
src/SO-ARM100_description/: CMakeLists.txt  package.xml
src/SO-ARM100_description/launch/: display.launch.py
src/SO-ARM100_description/rviz/: display_config.rviz
src/SO-ARM100_description/urdf/: so_arm100.urdf.xacro  utils.xacro
src/SO-ARM100_description/urdf/grippers/: gripper_jaw.xacro  gripper_none.xacro
src/SO_ARM100_kinematics/: CMakeLists.txt  package.xml  so_arm100_kinematics_plugin.xml  uncrustify.cfg
src/SO_ARM100_kinematics/include/: BaseJointAnalyzer.hpp  BaseJointModel.hpp  BaseJointSolver.hpp  Converter.hpp  DLSKinematicsSolver.hpp  Global.hpp  HybridKinematicsSolver.hpp  IKinematicsHeuristic.hpp  IKinematicsSolver.hpp  Joint.hpp  JointChain.hpp  JointType.hpp  KinematicsSolver.hpp  KinematicsUtils.hpp  Limits.hpp  Link.hpp  Logger.hpp  MatrixExponential.hpp  NumericJointsAnalyzer.hpp  NumericJointsModel.hpp  NumericJointsSolver.hpp  NumericSolverResult.hpp  RobotArmKinematicsPlugin.hpp  RobotArmKinematicsSolver.hpp  SolverResult.hpp  SolverType.hpp  Twist.hpp  Types.hpp  WorkspaceFilter.hpp  WristAnalyzer.hpp  WristModel.hpp  WristSolver.hpp  so_arm100_kinematics.hpp
src/SO_ARM100_kinematics/include/DLS/: AdaptativeDamping.hpp  DLSSolver.hpp  DLSSolverParameters.hpp  DLSSolverState.hpp
src/SO_ARM100_kinematics/include/DLSSolver/: AdaptativeDamping.hpp  AdaptativeStep.hpp  DLSKinematicsSolver.hpp  DLSSolver.hpp  DLSSolverState.hpp  NumericSolverResult.hpp  NumericSolverState.hpp  SugiharaAdaptativeDamping.hpp
src/SO_ARM100_kinematics/include/Euler/: EulerModel.hpp  SphericalSolver.hpp
src/SO_ARM100_kinematics/include/FABRIK/: Articulation.hpp  ArticulationState.hpp  FabrikAnalyzer.hpp  FabrikSolver.hpp  FabrikSolverDraft.hpp  Skeleton.hpp
src/SO_ARM100_kinematics/include/FABRIKSolver/: FabrikModel.hpp  FabrikSolver.hpp
src/SO_ARM100_kinematics/include/Heuristic/: BaseJointHeuristic.hpp  FabrikHeuristic.hpp  IIKHeuristic.hpp  IKHeuristic.hpp  IKHeuristicState.hpp  IKPresolution.hpp  JointGroupHeuristic.hpp  Planar1RHeuristic.hpp  Planar2RHeuristic.hpp  PlanarCCDHeuristic.hpp  PlanarNRHeuristic.hpp  PrismaticBaseHeuristic.hpp  RevoluteBaseHeuristic.hpp  ShoulderPanHeuristic.hpp  TopologyHeuristic.hpp  WristHeuristic.hpp  WristJointsHeuristic.hpp
src/SO_ARM100_kinematics/include/HybridSolver/: BaseJointSolver.hpp  BaseNumericWristSolver.hpp  BaseWristSolver.hpp  HybridKinematicsSolver.hpp  HybridSolver.hpp  HybridSolverConfiguration.hpp  HybridSolverFactory.hpp  NumericJointsAnalyzer.hpp  NumericJointsModel.hpp  NumericJointsSolver.hpp  NumericWristSolver.hpp  WristAnalyzer.hpp  WristCenterJointsModel.hpp  WristCenterSolver.hpp  WristModel.hpp  WristSolver.hpp
src/SO_ARM100_kinematics/include/Joint/: Joint.hpp  JointChain.hpp  Limits.hpp  Link.hpp  Pose.hpp
src/SO_ARM100_kinematics/include/Model/: Articulation.hpp  ArticulationState.hpp  ArticulationType.hpp  Bone.hpp  BoneState.hpp  ChainTotalLengthReachableSpace.hpp  ElbowConfiguration.hpp  IKJointGroupModelBase.hpp  IKModelBase.hpp  Joint.hpp  JointChain.hpp  JointGroup.hpp  JointState.hpp  JointType.hpp  KinematicModel.hpp  KinematicTopology.hpp  KinematicTopoly.hpp  Limits.hpp  Link.hpp  Pose.hpp  ReachableSpace.hpp  Skeleton.hpp  SkeletonTotalLengthReachableSpace.hpp  TotalLengthReachableSpace.hpp  Twist.hpp  WristTopology.hpp
src/SO_ARM100_kinematics/include/ModelAnalyzer/: BaseAnalyzer.hpp  BaseJointAnalyzer.hpp  FallbackFabrikAnalyzer.hpp  HybridSolverAnalyzer.hpp  HybridSolverFactory.hpp  PlanarNRAnalyzer.hpp  ShoulderPanAnalyzer.hpp  SkeletonAnalyzer.hpp  TopologyAnalyzer.hpp  WristAnalyzer.hpp  WristCenterJointsAnalyzer.hpp
src/SO_ARM100_kinematics/include/PipelineSolver/: IKPipeline.hpp  PipelineBuilder.hpp  PipelineSolver.hpp  PipelineSolverInitializer.hpp  PipelineSolverParameters.hpp
src/SO_ARM100_kinematics/include/Scorer/: CenteredScorer.hpp  CloseToCenterScorer.hpp  CloseToSeedScorer.hpp  IKSolutionScorer.hpp  ManipulabilityScorer.hpp  PoseErrorScorer.hpp  ScoreStrategy.hpp  SeedConsistencyScorer.hpp  WeightedScorer.hpp  WeightedScorerBuilder.hpp  WeightedScorers.hpp  WeightedScorersBuilder.hpp
src/SO_ARM100_kinematics/include/Seed/: IIKSeedGenerator.hpp  IKOppositeSeedGenerator.hpp  IKRandomSeedGenerator.hpp  IKSeedGenerator.hpp
src/SO_ARM100_kinematics/include/Solver/: IIKSolver.hpp  IKPipeline.hpp  IKProblem.hpp  IKRunContext.hpp  IKSolution.hpp  IKSolver.hpp  IKSolverBase.hpp  IKSolverState.hpp  SolverHistory.hpp  SolverType.hpp
src/SO_ARM100_kinematics/include/SphericalSolver/: EulerModel.hpp  EulerSolver.hpp  SphericalModel.hpp  SphericalSolution.hpp  SphericalSolutionBranch.hpp  SphericalSolver.hpp
src/SO_ARM100_kinematics/include/UniversalSolver/: UniversalModel.hpp  UniversalSolution.hpp  UniversalSolver.hpp
src/SO_ARM100_kinematics/include/Utils/: Converter.hpp  (+5 more)
src/SO_ARM100_kinematics/src/: BaseJointAnalyzer.cpp  BaseJointSolver.cpp  Converter.cpp  DLSKinematicsSolver.cpp  HybridKinematicsSolver.cpp  JointChain.cpp  KinematicsSolver.cpp  KinematicsUtils.cpp  MatrixExponential.cpp  NumericJointsAnalyzer.cpp  NumericJointsSolver.cpp  RobotArmKinematicsPlugin.cpp  RobotArmKinematicsSolver.cpp  Twist.cpp  WorkspaceFilter.cpp  WristAnalyzer.cpp  WristSolver.cpp  plugin_init.cpp  so_arm100_kinematics.cpp
src/SO_ARM100_kinematics/test/: BaseJointAnalyzerTest.cpp  BaseJointSolverTest.cpp  BaseNumericWristSolverTest.cpp  BaseWristSolverTest.cpp  ConverterTest.cpp  DLSKinematicsSolverTest.cpp  DLSSolverTest.cpp  FABRIKKinematicsSolverTest.cpp  FABRIKSolverTest.cpp  HybridKinematicsSolverTest.cpp  HybridSolverAnalyzerTest.cpp  HybridSolverFactoryTest.cpp  JointChainTest.cpp  JointGroupHeuristicTest.cpp  JointGroupTest.cpp  KinematicTopologyTest.cpp  KinematicsSolverTest.cpp  KinematicsUtilsTest.cpp  LimitsTest.cpp  MatrixExponentialTest.cpp  NumericJointsAnalyzerTest.cpp  NumericJointsSolverTest.cpp  TotalLengthReachableSpaceTest.cpp  TwistTest.cpp  WorkspaceFilterTest.cpp  WristAnalyzerTest.cpp  WristSolverTest.cpp
(+229 files in other folders)
